src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Fredericka+the+Great&family=Mooli&display=swap");

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: mooli;
  & > * {
    font-family: mooli;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

/* end of default */

.app-header {
  width: 100vw;
  min-height: 10vh;
  background: rgba(0, 0, 0, 0.3);
  position: absolute;
  top: 2vw;
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-left: 24vh;
  font-size: 28px;
  line-height: 32px;
  color: white;
  z-index: 10;

  @media screen and (max-width: 1024px) {
    padding-left: 2vw;
    height: min-content;
    top: 2vw;
    background: none;
    flex-direction: column-reverse;
    gap: 24px;
  }

  div {
    font-family: "Fredericka the Great", cursive;
  }
}

.menu-item {
  width: 15vw;
  transition: color 300ms;
  transition: transform 200ms;
  font-family: caveat;
  &:hover {
    /*color: rgb(1, 179, 75);*/
    text-shadow: 1px 1px rgb(23, 181, 12);
    transform: scale(1.1);
  }

  @media screen and (max-width: 1024px) {
    width: 24vw;
    font-size: 4vw;
    line-height: 4vw;
    text-align: center;
  }
}

.app-footer {
  width: 100vw;
  height: 10vh;
  background: rgba(0, 0, 0, 1);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 20px;
}

.page-cover-image {
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  object-position: center;
  filter: brightness(90%);
  @media screen and (max-width: 1024px) {
    object-fit: cover;
  }
}

.page-cover-position-right {
  object-position: right;
}

.page-cover-image-text {
  height: 100%;
  padding: 16px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  font-weight: 500;
  font-family: caveat;
  margin-left: auto;
  margin-right: auto;
  background: rgba(0, 0, 0, 0.524);
  @media screen and (max-width: 1024px) {
    height: 25vh;
  }
}

.title-container {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: min-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  overflow: hidden;
}

.cover-paragraph {
  padding: 12px 1vw;
  width: 100%;
  color: white;
  font-family: mooli;
  font-size: 1.3vw;
  text-align: justify;
  position: relative;

  @media screen and (max-width: 1024px) {
    font-size: 3.5vw;
    padding: 2vw 1vw;
  }
}

.cover-text-background {
  @media screen and (max-width: 1024px) {
    object-fit: cover;
    overflow: hidden;
  }
}

.standard-paragraph {
  padding: 12px 0vw;
  width: 100%;
  color: white;
  font-family: mooli;
  font-size: 18px;
  text-align: justify !important;
  @media screen and (max-width: 1024px) {
    font-size: 4vw;
    padding: 3vw 12vw;
  }
}

.standard-section-title {
  color: white;
  width: 100%;
  padding: 4px;
  text-align: center;
  font-size: 50px;
  font-family: caveat;
  position: relative;
  position: absolute;
  top: 40%;
  left: 0%;
  @media screen and (max-width: 1024px) {
    font-size: 30px;
  }
}

.menu-container {
  width: 76vw;
  display: flex;
  justify-content: space-evenly;
  text-align: center;
  @media screen and (max-width: 1024px) {
    width: 90vw;
    justify-content: space-evenly;
    background: rgba(0, 0, 0, 0.3);
  }
}

.footer {
  display: flex;
  flex-direction: row;
  background-color: rgb(245, 245, 245);
  padding: 16px;
  font-family: caveat;
  background-color: rgb(20, 20, 20);
  color: white;
  @media screen and (max-width: 1024px) {
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
  }
}

.footer-container {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 24px;
  padding-left: 10vw;
  font-size: 20px;
  @media screen and (max-width: 1024px) {
    width: fit-content;
    padding: 0;
  }
  & > * {
    text-align: center;
  }
}

.standard-content-image {
  height: fit-content;
  width: 80%;
  object-fit: contain;
  margin: 4vw 0;
  border-radius: 12px;
  max-height: 90vh;
  @media screen and (max-width: 1024px) {
    width: 100vw;
    border-radius: 0;
  }
}

.activity-info-card {
  width: 40%;
  object-fit: contain;
  margin-top: 2vh;
  height: min-content;
  margin: 2vw 0;
  @media screen and (max-width: 1024px) {
    width: 100%;
  }
}

.page-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 48px 20vw;
  gap: 32px;
  @media screen and (max-width: 1024px) {
    padding: 24px 5vw;
  }
  & > * {
    text-align: center;
  }
}

.black {
  color: rgb(46, 46, 46);
}

.site-logo {
  width: 9vw;
  height: 9vw;
  padding: 1vw;
  box-sizing: border-box;
  background: rgb(243, 255, 245, 0.95);
  border-radius: 50%;
  position: fixed;
  border: 2px solid rgb(22, 186, 90);
  border-bottom: 1px;
  left: -1.5vw;
  top: 1vh;
  z-index: 100;

  box-shadow: 0 0 3px rgb(108, 108, 108);
  @media screen and (max-width: 1024px) {
    width: 20vw;
    height: 20vw;
    padding: 1vw;
    position: absolute;
    left: 45vw;
    top: 10vh;
  }
}

.animal-card {
  padding: 40px 20px;
  width: 80%;
  display: flex;

  flex-wrap: nowrap;
  color: black;
  @media screen and (max-width: 1024px) {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 12px;
  }
}

.animal-card__container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 12px;
}

.animal-card__avatar {
  min-width: 250px;
  max-width: 250px;
  min-height: 250px;
  max-height: 250px;
  border-radius: 50%;
  object-fit: cover;
  z-index: 2;
  border: 3px solid rgb(22, 186, 90);
}

.animal-card__key-info {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding: 8px;
  text-align: center;
  background: rgb(22, 186, 90);
  width: 100%;
  position: relative;
  left: -80px;
  height: 36px;
  line-height: 20px;
  font-size: 20px;
  top: 20px;
  border-radius: 8px;
  font-family: caveat;
  font-weight: bold;
  @media screen and (max-width: 1024px) {
    position: unset;
    background: unset;
  }
}

.animal-card__description {
  width: 100%;
  padding-right: 80px;
  padding-left: 20px;
  padding-top: 2vh;
  @media screen and (max-width: 1024px) {
    padding: unset;
    text-align: justify;
  }
}

.animal-card__description-paragraph {
  padding: 2vh 0;
  text-align: justify;
}

.activity-card {
  padding: 4vh 2vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.activity-card-paragraph {
  padding: 12px 10vw;
  width: 100%;
  color: black;
  font-family: mooli;
  font-size: 18px;
  text-align: justify;
  @media screen and (max-width: 1024px) {
    font-size: 3.5vw;
    padding: 2vw 10vw;
  }
}

.activity-card-title {
  padding-top: 48px;
  padding-left: 0vw;
  margin-bottom: 24px;
  width: 80%;
  color: black;
  font-family: caveat;
  font-size: 48px;
  text-align: justify;
  border-bottom: 2px solid rgb(22, 186, 90);
  @media screen and (max-width: 1024px) {
    font-size: 20px;
    padding: 2vw 0vw;
  }
}

.bulletpoints-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start !important;
  min-width: 100%;
  margin-top: 32px;
  & > * {
    font-weight: 100;
    font-size: 18px;
    padding: 4px 0;
    text-align: left;
    @media screen and (max-width: 1024px) {
      font-size: 12px;
      padding: 2vw 10vw;
    }
  }
}

.google-map {
  margin: 48px;
}

.facebook-link {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: rgb(0, 124, 225);
  &:hover {
    color: rgb(0, 124, 225);
  }
}

.email-icon {
  width: 40px;
  height: 40px;
  font-size: 30px;
  line-height: 30px;
  box-sizing: border-box;
  display: flex;
  border-radius: 50%;
  color: white;
  justify-content: center;
  justify-items: center;
}

.social-networks {
  display: flex;
  height: 10vh;
  margin-top: 3vh;
  justify-content: space-evenly;
}

